add game level to api
