# src/numbers_game/api_spec.yaml
@@ -28,6 +28,13 @@ paths:
         required: true
         schema:
           type: integer
+      - name: level
+        in: query
+        required: false
+        schema:
+          type: integer
+          minimum: 0
+          maximum: 2
       responses:
         '200':
           description: Ok
